[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/Title_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Themes/Base_theme.tres" type="Theme" id=2]
[ext_resource path="res://GUI/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -92.0
margin_right = 135.0
margin_bottom = -23.0
custom_fonts/font = ExtResource( 1 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 38 )
text = "Resume"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 92.0
rect_min_size = Vector2( 200, 38 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
